plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.4'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.calendarbox'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-cache'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.postgresql:postgresql'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.flywaydb:flyway-core'
	implementation 'org.flywaydb:flyway-database-postgresql'
	// Swagger/OpenAPI (initializer에 없어서 수동 추가)
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'

    //Webflux
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    //thymeleaf
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

	//S3
	implementation("software.amazon.awssdk:s3:2.25.70")
	implementation("org.apache.commons:commons-io:1.3.2") // 선택


	//jwt
	implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
	runtimeOnly   'io.jsonwebtoken:jjwt-impl:0.12.5'
	runtimeOnly   'io.jsonwebtoken:jjwt-jackson:0.12.5'

	//hash 문자열 사용
	implementation 'commons-codec:commons-codec:1.16.0'

	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'org.testcontainers:junit-jupiter'
	testImplementation 'org.testcontainers:postgresql'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}

bootJar {
	archiveFileName = 'calendarbox.jar'   // 항상 이 이름으로 생성
}
